// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartLegend [NEGATIVE] should render chart legend with empty props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="chart-legend"
      mode="left"
    />
  </div>
</body>
`;

exports[`ChartLegend [NEGATIVE] should render chart legend without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="chart-legend"
      mode="left"
    />
  </div>
</body>
`;

exports[`ChartLegend test chart legend if canToggle=false 1`] = `
.c4 {
  display: inline-grid;
  gap: 0.625rem;
  grid-template-columns: 1.25rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c6 {
  width: 1.25rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: inline-block;
}

.c2 input {
  display: none;
}

.c2 .c5 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #4475E3;
}

.c2 .c5 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover > .c3 {
  cursor: pointer;
}

.c9 {
  display: inline-block;
}

.c9 input {
  display: none;
}

.c9 .c5 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  fill: #1AD598;
}

.c9 .c5 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c9:hover > .c3 {
  cursor: pointer;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

.c1 {
  margin-right: 0.625rem;
}

.c1 circle {
  opacity: 1;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="chart-legend"
      mode="left"
    >
      <div
        class="c1"
        mode="left"
      >
        <div
          class="c2 "
          color="primary"
          kind="filled"
          readonly=""
        >
          <label
            class="c3 c4"
            for="3"
          >
            <div
              class="c5 c6"
            >
              <svg />
            </div>
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                Male
              </div>
            </div>
          </label>
          <input
            checked=""
            data-testid="male"
            id="3"
            readonly=""
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="c1"
        mode="left"
      >
        <div
          class="c9 "
          color="secondaryGreen"
          kind="filled"
          readonly=""
        >
          <label
            class="c3 c4"
            for="4"
          >
            <div
              class="c5 c6"
            >
              <svg />
            </div>
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                Female
              </div>
            </div>
          </label>
          <input
            checked=""
            data-testid="female"
            id="4"
            readonly=""
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ChartLegend test chart legend render 1`] = `
.c4 {
  display: inline-grid;
  gap: 0.625rem;
  grid-template-columns: 1.25rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c7 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c6 {
  width: 1.25rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: inline-block;
}

.c2 input {
  display: none;
}

.c2 .c5 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #4475E3;
}

.c2 .c5 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c2:hover > .c3 {
  cursor: pointer;
}

.c2:hover .c5 svg > :first-child {
  fill: #ECF1FC;
  stroke: #2F65E0;
}

.c9 {
  display: inline-block;
}

.c9 input {
  display: none;
}

.c9 .c5 > svg > :nth-child(1) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #1AD598;
}

.c9 .c5 > svg > :nth-child(2) {
  -webkit-transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke-color 300ms cubic-bezier(0.45,0.05,0,1), fill 300ms cubic-bezier(0.45,0.05,0,1);
}

.c9:hover > .c3 {
  cursor: pointer;
}

.c9:hover .c5 svg > :first-child {
  fill: #E8FBF5;
  stroke: #16B37F;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
}

.c1 {
  margin-right: 0.625rem;
}

.c1 circle {
  opacity: 1;
}

.c8 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #2D2D2D;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  width: 100%;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  -webkit-box-orient: vertical;
  white-space: pre-line;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="chart-legend"
      mode="left"
    >
      <div
        class="c1"
        mode="left"
      >
        <div
          class="c2 "
          color="primary"
          kind="radio"
        >
          <label
            class="c3 c4"
            for="1"
          >
            <div
              class="c5 c6"
            >
              <svg />
            </div>
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                Male
              </div>
            </div>
          </label>
          <input
            data-testid="male"
            id="1"
            type="checkbox"
          />
        </div>
      </div>
      <div
        class="c1"
        mode="left"
      >
        <div
          class="c9 "
          color="secondaryGreen"
          kind="radio"
        >
          <label
            class="c3 c4"
            for="2"
          >
            <div
              class="c5 c6"
            >
              <svg />
            </div>
            <div
              class="c7"
            >
              <div
                class="c8"
              >
                Female
              </div>
            </div>
          </label>
          <input
            data-testid="female"
            id="2"
            type="checkbox"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
